--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,3 +93,94 @@
     background-color: #fcf8e3;
     border-color: #faebcc;
   }
+
+
+
+
+
+
+  /* mobiles page */
+  .search-wrapper{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: #293340;
+
+  }
+
+  .search-wrapper input{
+    width: 50%;
+    text-decoration: none;
+    outline: none;
+    padding: 10px;
+    border-radius: 10px;
+  }
+
+  .mobiles-wrapper{
+    width: 100%;
+    height: fit-content;
+    border: 3px solid #293340;
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 25px;
+  }
+
+  .mobile-grid{
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .mobile{
+    width: 270px;
+    height: 380px;
+    background-color: #293340;
+    border-radius: 15px;
+    box-shadow: #505357 0px 0px 15px;
+
+    gap: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+
+
+    overflow: hidden;
+    color: #bce8f1;
+  }
+
+  .mobile img{
+    width: 100%;
+    height: 165px;
+    margin-bottom: 15px;
+    object-fit: cover;
+  }
+  .mobile .info{
+    padding: 15px;  
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .descirption{
+    height: 150px;
+    overflow: hidden;
+  }
+  .mobile .price{
+    padding: 15px;
+    margin-top: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
